fix image height issue on mobile

--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -19,7 +19,7 @@
       img {
         max-width: inherit;
         max-height: inherit;
-        height: inherit;
+        //height: inherit;
         width: inherit;
         object-fit: contain;
         object-position: top;
